#												-*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([jcal], [0.2], [ghassemi@ftml.net])
AC_CONFIG_SRCDIR([src/])

AM_INIT_AUTOMAKE
AC_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([limits.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_STRUCT_TIMEZONE

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([localtime_r memset strcasecmp strchr strstr tzset])

AC_CONFIG_FILES([Makefile
				 libjalali/Makefile
				 man/Makefile
				 src/Makefile])
AC_OUTPUT
