man_MANS = jalali_create_date_from_days.3 jalali_get_date.3 jalali_update.3 jctime.3 jgmtime_r.3 jstrftime.3 jalali_create_days_from_date.3 jalali_get_diff.3 jasctime.3 jctime_r.3 jlocaltime.3 jstrptime.3 jalali_create_secs_from_time.3 jalali_get_jyear_info.3 jasctime_r.3 jdate.1 jlocaltime_r.3 jalali_create_time_from_secs.3 jalali_is_jleap.3 jcal.1 jgmtime.3 jmktime.3
EXTRA_DIST = $(man_MANS)
